--- a/index.html
+++ b/index.html
@@ -2,20 +2,10 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - learning react</title>
-  
-
+  <title>Darlingson | Analytics Project</title>
 </head>
 <body>
-<!-- partial:index.partial.html -->
-<html>
-
-<body>
   <div id=root></div>
-</body>
-
-</html>
-<!-- partial -->
   <script src='https://cdnjs.cloudflare.com/ajax/libs/react/18.2.0/umd/react.production.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/react-dom/18.2.0/umd/react-dom.production.min.js'></script>
   <script  src="script.js"></script>
