--- a/index.html
+++ b/index.html
@@ -2,13 +2,32 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Darlingson | Analytics Project</title>
+  <title>CodePen - Analytics project frontend</title>
+  
+
 </head>
 <body>
+<!-- partial:index.partial.html -->
+<html>
+
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+
+<head>
+
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+
+</head>
+
+<body>
+
   <div id=root></div>
+
+</body>
+
+</html>
+<!-- partial -->
   <script src='https://cdnjs.cloudflare.com/ajax/libs/react/18.2.0/umd/react.production.min.js'></script>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/react-dom/18.2.0/umd/react-dom.production.min.js'></script>
-  <script  src="script.js"></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/react-dom/18.2.0/umd/react-dom.production.min.js'></script><script type="module" src="./script.js"></script>
 
 </body>
 </html>
