--- a/index.html
+++ b/index.html
@@ -1,18 +1,12 @@
-<!DOCTYPE html>
-<html lang="en" >
-<head>
-  <meta charset="UTF-8">
-  <title>CodePen - Analytics project frontend</title>
-  
-
-</head>
-<body>
-<!-- partial:index.partial.html -->
 <html>
 
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 
 <head>
+  <link
+  rel="stylesheet"
+  href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+/>
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
 
@@ -24,10 +18,4 @@
 
 </body>
 
-</html>
-<!-- partial -->
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/react/18.2.0/umd/react.production.min.js'></script>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/react-dom/18.2.0/umd/react-dom.production.min.js'></script><script type="module" src="./script.js"></script>
-
-</body>
 </html>
