--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html lang="en" >
+<head>
+  <meta charset="UTF-8">
+  <title>CodePen - Analytics project frontend</title>
+  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css'>
+
+</head>
+<body>
+<!-- partial:index.partial.html -->
 <html>
 
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -18,4 +28,14 @@
 
 </body>
 
+</html>
+<!-- partial -->
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/react/18.2.0/umd/react.production.min.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/react-dom/18.2.0/umd/react-dom.production.min.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.3.0/chart.min.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/react-chartjs/1.2.0/react-chartjs.min.js'></script>
+<script src='https://code.jquery.com/jquery-3.6.4.min.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js'></script><script type="module" src="./script.js"></script>
+
+</body>
 </html>
