--- a/index.html
+++ b/index.html
@@ -17,9 +17,6 @@
   rel="stylesheet"
   href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
 />
-
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
-
 </head>
 
 <body>
@@ -32,10 +29,8 @@
 <!-- partial -->
   <script src='https://cdnjs.cloudflare.com/ajax/libs/react/18.2.0/umd/react.production.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/react-dom/18.2.0/umd/react-dom.production.min.js'></script>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.3.0/chart.min.js'></script>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/react-chartjs/1.2.0/react-chartjs.min.js'></script>
-<script src='https://code.jquery.com/jquery-3.6.4.min.js'></script>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js'></script><script type="module" src="./script.js"></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js'></script>
+  <script type="module" src="./script.js"></script>
 
 </body>
 </html>
